--- a/src/app/views/registration/recording-acts/recording-acts-list.component.html
+++ b/src/app/views/registration/recording-acts/recording-acts-list.component.html
@@ -23,8 +23,10 @@
     <ng-container matColumnDef="actionCopy">
       <th mat-header-cell *matHeaderCellDef> </th>
       <td mat-cell *matCellDef="let row" class="column-action">
-        <mat-icon title="Copiar folio electrónico" [cdkCopyToClipboard]="row.recordableSubject.electronicID"
-          matRipple [matRippleCentered]="true" [matRippleUnbounded]="true" (click)="showAlertTextCopied()">
+        <mat-icon title="Copiar folio electrónico"
+          matRipple [matRippleCentered]="true" [matRippleUnbounded]="true"
+          [cdkCopyToClipboard]="row.recordableSubject.electronicID"
+          (cdkCopyToClipboardCopied)="showAlertTextCopied($event)">
           bookmark
         </mat-icon>
       </td>
