Styles added to expansion-button component

--- a/src/app/shared/containers/expansion-button/expansion-button.component.html
+++ b/src/app/shared/containers/expansion-button/expansion-button.component.html
@@ -1,4 +1,4 @@
-<div class="tab-container">
+<div class="expand-panel-margin">
   <mat-accordion hideToggle>
     <mat-expansion-panel [expanded]="panelState" (opened)="setPanelState(true)"
       (closed)="setPanelState(false)">
