--- a/src/app/views/registration/recording-book/book-entry-list.component.html
+++ b/src/app/views/registration/recording-book/book-entry-list.component.html
@@ -1,7 +1,6 @@
-<div class="tab-container scrollable-container mat-elevation-z1" [style.maxHeight.%]="35">
+<div class="scrollable-container mat-elevation-z1" [style.maxHeight.%]="50" [style.margin.px]="3">
 
   <table mat-table [dataSource]="dataSource">
-
     <ng-container matColumnDef="recordingNo">
       <th mat-header-cell *matHeaderCellDef> Inscripción </th>
       <td mat-cell *matCellDef="let row"> {{ row.recordingNo }} </td>
@@ -30,8 +29,8 @@
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true;"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="selectable-row"
-      (click)="onBookEntryClicked(row)"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="onBookEntryClicked(row)"
+      class="selectable-row" [ngClass]="{'row-selected': bookEntrySelected.uid === row.uid}"></tr>
   </table>
 
   <div *ngIf="dataSource?.data.length === 0" class="text-not-found">
