Use recording-book-selector + get recording-book and create/delete book-entry since data service

--- a/src/styles/angular-material-styles.scss
+++ b/src/styles/angular-material-styles.scss
@@ -237,6 +237,10 @@ table.mat-table {
 
     &.mat-row {
       background-color: $white;
+
+      &.row-selected {
+        background-color: $selected-control-background-color;
+      }
     }
 
     &:hover .mat-cell {
