--- a/src/app/views/registration/recording-book/recording-book-editor.component.html
+++ b/src/app/views/registration/recording-book/recording-book-editor.component.html
@@ -1,28 +1,59 @@
-<emp-ng-card [title]="cardTitle" [hint]="cardHint" (cardClose)="onClose()">
+<div class="card card-border">
 
-  <div class="card-body-padding" [style.height.%]="100">
+  <div class="card-header card-header-flat">
 
-    <emp-land-book-entry-list
-      [recordingBook]="recordingBook"
-      (bookEntryListEvent)="onBookEntryListEvent($event)">
+    <div class="card-title">
+      Registro por volumen
 
-    </emp-land-book-entry-list>
+    <div class="card-hint" empNgProgressText
+      loadingText="Cargando el volumen seleccionado"
+      [finalText]="cardHint"
+      [isLoading]="isLoading">
+    </div>
 
-    <emp-ng-expansion-button [(panelState)]="panelAddState"
-      [config]="{textButtonOpen: 'Agregar una inscripción a este volumen',
-                 textButtonClose: 'Cancelar agregar registro'}">
-
-      <emp-land-instrument-editor *ngIf="panelAddState"
-        title=""
-        submitButtonText="Agregar la inscripción a este volumen"
-        [addMode]="true"
-        defaultType="Resumen"
-        (instrumentEditorEvent)="onInstrumentEditorEvent($event)">
-
-      </emp-land-instrument-editor>
-
-    </emp-ng-expansion-button>
+    </div>
 
   </div>
 
-</emp-ng-card>
+  <div class="card-body" [empNgSpinnerHost]="spinner">
+
+    <emp-ng-spinner #spinner [visible]="isLoading"></emp-ng-spinner>
+
+    <div class="list-selection-header">
+
+      <emp-land-recording-book-selector
+        [showRecordingBookEntryField]="false"
+        (recordingBookSelectorEvent)="onRecordingBookSelectorEvent($event)">
+
+      </emp-land-recording-book-selector>
+
+    </div>
+
+    <ng-container *ngIf="displayRecordingBookEditor">
+
+      <emp-land-book-entry-list
+        [recordingBook]="recordingBookSelected"
+        (bookEntryListEvent)="onBookEntryListEvent($event)">
+
+      </emp-land-book-entry-list>
+
+      <emp-ng-expansion-button [(panelState)]="panelAddState"
+        [config]="{textButtonOpen: 'Agregar una inscripción a este volumen',
+                  textButtonClose: 'Cancelar agregar registro'}" class="no-margin">
+
+        <emp-land-instrument-editor *ngIf="panelAddState"
+          title=""
+          submitButtonText="Agregar la inscripción a este volumen"
+          [addMode]="true"
+          defaultType="Resumen"
+          (instrumentEditorEvent)="onInstrumentEditorEvent($event)">
+
+        </emp-land-instrument-editor>
+
+      </emp-ng-expansion-button>
+
+    </ng-container>
+
+  </div>
+
+</div>
