--- a/src/app/workspaces/historic-registration/historic-registration-workspace.component.html
+++ b/src/app/workspaces/historic-registration/historic-registration-workspace.component.html
@@ -28,6 +28,7 @@
     [fxHide.lt-lg]="displayRecordingActEditor">
 
     <emp-land-book-entry-editor
+      [recordingBookUID]="selectedRecordingBook.uid"
       [bookEntryUID]="selectedBookEntry.uid"
       [instrumentRecordingUID]="selectedBookEntry.instrumentRecordingUID"
       (closeEvent)="unselectBookEntry()">
