Display selected recording-act in editor

--- a/src/app/workspaces/historic-registration/historic-registration-workspace.component.html
+++ b/src/app/workspaces/historic-registration/historic-registration-workspace.component.html
@@ -31,6 +31,7 @@
       [recordingBookUID]="selectedRecordingBook.uid"
       [bookEntryUID]="selectedBookEntry.uid"
       [instrumentRecordingUID]="selectedBookEntry.instrumentRecordingUID"
+      (bookEntryEditorEvent)="onBookEntryEditorEvent($event)"
       (closeEvent)="unselectBookEntry()">
 
     </emp-land-book-entry-editor>
