--- a/src/app/views/recordable-subjects/real-estate/real-estate-editor.component.html
+++ b/src/app/views/recordable-subjects/real-estate/real-estate-editor.component.html
@@ -130,7 +130,7 @@
 
       <div fxFlex fxLayoutAlign="center center">
 
-        <ng-container *ngIf="editionMode && !readonly">
+        <ng-container>
 
           <span style="padding-right: 0.5rem;">Marcar el predio como:</span>
 
