--- a/src/styles/list.scss
+++ b/src/styles/list.scss
@@ -29,6 +29,7 @@ $box-shadow: 0 3px 1px -2px rgba(44, 57, 66, 0.1),
   position: -webkit-sticky; /* Safari */
   position: sticky;
   top: 0;
+  z-index: 105;
 
   > span {
     padding: 8px;
