--- a/src/app/views/registration/recording-book/book-entry-list.component.html
+++ b/src/app/views/registration/recording-book/book-entry-list.component.html
@@ -22,8 +22,18 @@
       <th mat-header-cell *matHeaderCellDef> </th>
       <td mat-cell *matCellDef="let row; let i = index" class="column-action">
         <mat-icon title="Mostrar archivos" *ngIf="row.mediaFiles?.length > 0"
-          (click)="showFilesBookEntry(row); $event.stopPropagation();">
+          (click)="showFilesBookEntry(row);">
           auto_stories
+        </mat-icon>
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="actionEdit">
+      <th mat-header-cell *matHeaderCellDef> </th>
+      <td mat-cell *matCellDef="let row; let i = index" class="column-action">
+        <mat-icon title="Editar inscripción"
+          (click)="onBookEntryClicked(row)">
+          edit
         </mat-icon>
       </td>
     </ng-container>
@@ -32,15 +42,15 @@
       <th mat-header-cell *matHeaderCellDef> </th>
       <td mat-cell *matCellDef="let row; let i = index" class="column-action">
         <mat-icon title="Eliminar inscripción"
-          (click)="removeBookEntry(row); $event.stopPropagation();">
+          (click)="removeBookEntry(row);">
           delete
         </mat-icon>
       </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true;"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="onBookEntryClicked(row)"
-      class="selectable-row" [ngClass]="{'row-selected': bookEntrySelected.uid === row.uid}"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"
+      [ngClass]="{'row-selected': bookEntrySelected.uid === row.uid}"></tr>
   </table>
 
   <div *ngIf="dataSource?.data.length === 0" class="text-not-found">
